# lastlock

./: .gitignore  CMakeLists.txt  F103_flash.md  README.md  bluepill.cfg  main.c  mos.yml
QCA4020_SDK/: CMakeLists.txt
QCA4020_SDK/.metadata/: version.ini
QCA4020_SDK/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
QCA4020_SDK/.metadata/.plugins/org.eclipse.equinox.p2.ui/: dialog_settings.xml
doc/: Quick_Start.md
mongoose/src/: main.c
spec/: recycle.tla  recycler.tla  wire.tla
spec/recycle.toolbox/: .project  recycle.tla.pmap  recycle___Model_1.launch  recycle___Model_1_SnapShot_1548611317541.launch  recycle___Model_1_SnapShot_1548632125542.launch
spec/recycle.toolbox/Model_1/: MC.cfg  MC.tla
spec/recycle.toolbox/Model_1_SnapShot_1548611317541/: MC.cfg  MC.tla  recycle.tla
spec/wire.toolbox/: wire.tla.pmap  wire___Model_1.launch  wire___Model_1_SnapShot_1548056724867.launch  wire___Model_1_SnapShot_1548057666583.launch  wire___Model_1_SnapShot_1548058940972.launch  wire___Model_1_SnapShot_1548059006475.launch  wire___Model_1_SnapShot_1548059569352.launch
spec/wire.toolbox/Model_1/: MC.cfg  MC.tla  wire.tla
spec/wire.toolbox/Model_1_SnapShot_1548056724867/: MC.cfg  MC.tla  wire.tla
spec/wire.toolbox/Model_1_SnapShot_1548057666583/: MC.cfg  MC.tla  wire.tla
spec/wire.toolbox/Model_1_SnapShot_1548058940972/: MC.cfg  MC.tla  wire.tla
spec/wire.toolbox/Model_1_SnapShot_1548059006475/: MC.cfg  MC.tla  wire.tla
spec/wire.toolbox/Model_1_SnapShot_1548059569352/: MC.cfg  MC.tla
src/: main.c
zephyr/src/: main.c
(+7 files in other folders)
